Fix items alignment inside Visy area

--- a/css/styles.css
+++ b/css/styles.css
@@ -485,9 +485,11 @@ img[src="img/pl.svg"] {
     box-sizing: border-box;
     bottom: 0;
     opacity: 0.9;
+    left: 50%;
     background: #FFFFFF;
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
+    transform: translateX(-50%);
 }
 
 @media screen and (max-width: 420px) {
